<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ffffff_radius_15">

        <Space
            android:id="@+id/space_title_top"
            android:layout_width="300dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,280:64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_dialog_title"
            android:textColor="@color/black_000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space_title_top" />

        <Space
            android:id="@+id/space_title_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,300:40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_title" />

        <TextView
            android:id="@+id/tv_dialog_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/withdraw_dialog_content"
            android:textColor="@color/black_434343"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space_title_bottom"
            app:layout_constraintWidth_percent="0.85" />

        <Space
            android:id="@+id/space_content_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,300:40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_content" />

        <TextView
            android:id="@+id/tv_withdraw_ok"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/blue_576b9e"
            android:gravity="center"
            android:text="@string/withdraw_dialog_ok"
            android:textColor="@color/white_ffffff"
            android:textSize="14sp"
            app:layout_constraintDimensionRatio="H,184:48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space_content_bottom"
            app:layout_constraintWidth_percent="0.6133" />

        <TextView
            android:id="@+id/tv_withdraw_cancel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/withdraw_dialog_cancel"
            android:textColor="#929292"
            android:textSize="14sp"
            app:layout_constraintDimensionRatio="H,184:48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_withdraw_ok"
            app:layout_constraintWidth_percent="0.6133" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,300:40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_cancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
