<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ffffff_radius_20dp">

        <Space
            android:id="@+id/space_title_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,120:24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space_title_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="W,120:36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space_title_top"
            app:layout_constraintWidth_percent="0.15" />

        <Space
            android:id="@+id/space_title_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="W,120:36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space_title_top"
            app:layout_constraintWidth_percent="0.15" />

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/post_detail_dialog_title"
            android:textColor="@color/gray_434343"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/space_title_end"
            app:layout_constraintStart_toEndOf="@id/space_title_start"
            app:layout_constraintTop_toBottomOf="@id/space_title_top" />

        <Space
            android:id="@+id/space_title_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,105:24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
            app:layout_constraintWidth_percent="0.7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/post_detail_dialog_yes"
            android:textColor="@color/gray_434343"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_dialog_no"
            app:layout_constraintTop_toBottomOf="@id/space_title_bottom" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dialog_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/post_detail_dialog_no"
            android:textColor="@color/gray_434343"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_dialog_yes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space_title_bottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>